force-app/main/default/objects/POE_ProgramZipCode__c/POE_ProgramZipCode__c.object-meta.xml
<CustomObject>
    <label>Program By Zip Code</label>
    <nameField>
        <label>ZipCodeProduct Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs By Zip Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>