force-app/main/default/objects/POE_ProgramZipCode__c/fields/Available_In_Self_Service__c.field-meta.xml
<CustomField>
    <fullName>Available_In_Self_Service__c</fullName>
    <defaultValue>true</defaultValue>
    <description>PER-2745</description>
    <inlineHelpText>If true, the program will be available in Self Service site for this zipcode.</inlineHelpText>
    <label>Available In Self Service</label>
    <type>Checkbox</type>
</CustomField>