force-app/main/default/objects/POE_ProgramZipCode__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Price</label>
    <length>8</length>
    <type>Text</type>
</CustomField>