force-app/main/default/objects/POE_ProgramZipCode__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AT&amp;T</fullName>
                <isActive>false</isActive>
                <label>AT&amp;T</label>
            </value>
            <value>
                <fullName>Brightspeed</fullName>
            </value>
            <value>
                <fullName>Brinks</fullName>
            </value>
            <value>
                <fullName>Charter/Spectrum</fullName>
                <isActive>false</isActive>
                <label>Charter/Spectrum</label>
            </value>
            <value>
                <fullName>EarthLink</fullName>
            </value>
            <value>
                <fullName>Frontier</fullName>
            </value>
            <value>
                <fullName>Altice</fullName>
                <label>Optimum</label>
            </value>
            <value>
                <fullName>Charter</fullName>
                <label>Spectrum</label>
            </value>
            <value>
                <fullName>T-Mobile</fullName>
            </value>
            <value>
                <fullName>Viasat</fullName>
            </value>
            <value>
                <fullName>Windstream</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>