force-app/main/default/objects/POE_ProgramZipCode__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Program__c</columns>
    <columns>Speed__c</columns>
    <columns>Zip_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>