force-app/main/default/objects/POE_ProgramZipCode__c/listViews/All_Zip.listView-meta.xml
<ListView>
    <fullName>All_Zip</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Zip</label>
</ListView>